  * print functions for most grid indexes added, former output argument no longer exists
  * functions by topic overview documentation added
  * bindConstructs can now take many grids and/or lists of grids as arguments. Element names are now matched and reordered automatically
  * '+' can now be used to concatenated two grids or list of grids
  * importExcel function added

OpenRepGrid 0.1.6 (2012-04-05) ----------------------------------------
  * migrating code from roxygen to roxygen2
  * fixed bug in calcCoordsBorders


OpenRepGrid 0.1.5 (2011-17-07) ----------------------------------------
  * method dim to return size of a grid. A simple wrapper around getNoOfConstructs and getNoOfElements
  * package description updated
  * prob argument in distanceXXX functions added
  * bug in makeRepgrid corrected: ratings now read by row


OpenRepGrid 0.1.4 (2011-05-31) ----------------------------------------
  
  * demo added
  * bug corrected in importScivesco
  * changed package description
  * prob parameter: randomGrid(s), quasiDistributionDistanceSlater (dev)
  * distanceNormalized


OpenRepGrid 0.1.3 (2011-05-27) ----------------------------------------
  
  * permuteConstructs (dev)
  * update openrepgrid-internal
  * permuteGrid (dev)
  * update zzz
  * corrected COLLATION order


OpenRepGrid 0.1.2 (2011-05-21) ----------------------------------------
  
  * polishing of console output for several functions:
  * constructCor
  * elementCor
  * statsConstructs
  * statsElements
  * distance
  * alignByLoadings
  * some others might have been changed (undocumented)


OpenRepGrid 0.1.1 (2011-05-15) ----------------------------------------

  New Features
  
  * indexConflict1: unbalanced triads (Slade & Sheehan)
  * indexConflict2: unbalanced triads (Bassler et al.)
  * indexConflict3: triangle inequalities
  * indexDilemma: detect implicative dilemmas
  * data leach2001a and leach2001b

  Internal changes
  
  * getConstructNames2
  * getElementNames2