@@ -1,22 +1,3 @@
-S3method("[",openrepgridSettings)
-S3method(dim,repgrid)
-S3method(print,alignByLoadings)
-S3method(print,constructCor)
-S3method(print,constructD)
-S3method(print,constructPca)
-S3method(print,distance)
-S3method(print,elementCor)
-S3method(print,hdistance)
-S3method(print,indexConflict1)
-S3method(print,indexConflict2)
-S3method(print,indexConflict3)
-S3method(print,indexIntensity)
-S3method(print,indexPvaff)
-S3method(print,openrepgridSettings)
-S3method(print,rmsCor)
-S3method(print,ssq)
-S3method(print,statsConstructs)
-S3method(print,statsElements)
 export(addConstruct)
 export(addElement)
 export(addIndexColumnToMatrix)
@@ -47,6 +28,7 @@ export(cascade)
 export(center)
 export(clearRatings)
 export(cluster)
+export(clusterBoot)
 export(constructCor)
 export(constructD)
 export(constructPca)
@@ -150,3 +132,22 @@ export(swapPoles)
 export(trim_val)
 export(up)
 exportMethods("+")
+S3method("[",openrepgridSettings)
+S3method(dim,repgrid)
+S3method(print,alignByLoadings)
+S3method(print,constructCor)
+S3method(print,constructD)
+S3method(print,constructPca)
+S3method(print,distance)
+S3method(print,elementCor)
+S3method(print,hdistance)
+S3method(print,indexConflict1)
+S3method(print,indexConflict2)
+S3method(print,indexConflict3)
+S3method(print,indexIntensity)
+S3method(print,indexPvaff)
+S3method(print,openrepgridSettings)
+S3method(print,rmsCor)
+S3method(print,ssq)
+S3method(print,statsConstructs)
+S3method(print,statsElements)
